# mtga-log-client

./: .gitignore
.github/workflows/: python-lint.yml
src/python/: pyproject.toml
src/python/seventeenlands/: __init__.py  api_client.py  logging_utils.py  mtga_follower.py  recommend_client.py  retry_utils.py
